--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$background-error-color: #EFEFEF;
+body {
+  font-family: "Helvetica Neue", Arial, "Lucida Grande", sans-serif;
+}
+
+.field_with_errors label {
+  color: #B00100;
+  background-color: $background-error-color;
+  font-weight: bold;
+}
