--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,17 +1,3 @@
-<h1>It is my new article form</h1>
-<%= link_to 'Back', articles_path %>
-<%= form_for :article, url: articles_path do |f| %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
+<h1>New article</h1>
 
-  <p>
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
+<%= render 'form' %>
