--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Show article</h1>
-
+<%= link_to 'Back', articles_path %> | <%= link_to 'Edit', edit_article_path %>
 <p>
   <strong>Title:</strong>
   <%= @article.title %>
@@ -9,3 +9,12 @@
   <strong>Content:</strong>
   <%= @article.content %>
 </p>
+
+<h2>Add comment:</h2>
+<%= render 'comments/form' %>
+
+<h2>Comments:</h2>
+<%= render @article.comments %>
+
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Back', articles_path %>
