comments spike part 2

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,9 @@
+<p>
+  <b><%= comment.id %></b>
+</p>
 <p>Commenter: <%= comment.commenter %></p>
 <p>Body:<%= comment.body %></p>
+<%= link_to 'Delete Comment', [comment.article, comment],
+            method: :delete,
+            data: {confirm: 'Are you sure?'} %>
 <hr>
