--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,7 +14,8 @@
 <%= render 'comments/form' %>
 
 <h2>Comments:</h2>
-<%= render @article.comments %>
+<%= render partial: "comments/comment", collection: @article.comments %>
+
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
