--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for([@article, @article.comments.build]) do |f| %>
+<%= form_for([@article, Comment.new]) do |f| %>
+
     <p>
       <%= f.label :commenter %>
       <%= f.text_field :commenter %>
