--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -12,3 +12,9 @@ body {
   background-color: $background-error-color;
   font-weight: bold;
 }
+
+.header {
+  background-color: #B00100;
+  color: #EFEFEF;
+  padding: 10px;
+}
