--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -24,6 +24,11 @@
     </p>
 
     <p>
+      <%= f.label :published %><br>
+      <%= f.check_box :published%>
+    </p>
+
+    <p>
       <%= f.submit %>
     </p>
 
