--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,7 @@
   <tr>
     <td><%= a.title %></td>
     <td><%= a.content %></td>
+    <td><%= a.published_status %></td>
     <td><%= link_to 'edit', edit_article_path(a) %></td>
     <td><%= link_to 'pokaż', article_path(a) %></td>
     <td><%= link_to 'usuń', article_path(a), method: :delete, data: {confirm: 'Are you sure?'} %></td>
